crates/oxidoc/tests/snapshots/golden_writer__html__common__link-url-specials.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<p><a href="http://example.com/a%20b#frag">x</a></p>
