crates/oxidoc/tests/snapshots/golden_writer__html__common__nested-emphasis.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<p><em>emph with <strong>strong</strong> inside</em> end</p>
