crates/oxidoc/tests/snapshots/golden_writer__html__common__ordered-example.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<ol class="example" type="1">
<li>first</li>
<li>second</li>
</ol>
