crates/oxidoc/tests/snapshots/golden_writer__html__common__ordered-one-paren.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<ol type="1">
<li>one</li>
<li>two</li>
</ol>
