crates/oxidoc/tests/snapshots/golden_writer__html__common__para-wrap.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
<p>This is a deliberately long paragraph with enough words that the
writer must wrap it across the fill column boundary at least once or
twice.</p>
